Element.scroll methods should be layout relative

When Element == document.scrollingElement, these methods should delegate
to the `window` object's scrolling methods. With the inert visual
viewport change shipping in M61, these methods are relative to the
layout viewport so calling through document.scrollingElement should
behave the same way.

Bug: 747413
Change-Id: Ibb1d1bb29545161f1768110b22d63ea4a2d4f708
Reviewed-on: https://chromium-review.googlesource.com/581876
Commit-Queue: David Bokan <bokan@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#488970}
Former-commit-id: 59c99225580e691a55daf1f070ee2a19166abac9